--- a/assets/css/templatemo-tale-seo-agency.css
+++ b/assets/css/templatemo-tale-seo-agency.css
@@ -693,7 +693,7 @@ Header Style
     height: 50px !important;
     line-height: 50px !important;
     padding: 0px !important;
-    border: none !important;
+    border: none;
     background: #f7f7f7 !important;
     color: #191a20 !important;
   }
